examples/datalog/16_vectors/07_vector_operations.dl
% Test: Basic vector operations
% Expected: Vector functions work correctly
% Category: 16_vectors
% Priority: P1 - Vector completeness

.kg create test_vec_ops
.kg use test_vec_ops

% Store vectors
+vectors(1, [1.0, 2.0, 3.0]).
+vectors(2, [4.0, 5.0, 6.0]).
+vectors(3, [1.0, 0.0, 0.0]).

% Query vectors
?- vectors(Id, V).

% Find similar vectors using euclidean distance
+similar(Id1, Id2, euclidean_distance(V1, V2)) :-
    vectors(Id1, V1),
    vectors(Id2, V2),
    Id1 < Id2.

?- similar(A, B, D).

.kg use default
.kg drop test_vec_ops
